# near-smart-account

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE-V5-SPLIT.md  CLAUDE.md  Cargo.toml  DEPLOY-MIKE-NEAR.md  DEPLOY-SEQUENTIAL-INTENTS.md  FLAGSHIP-HOWTO.md  HARDENING-REVIEW.md  INTENTS.md  MAINNET-MIKE-NEAR-JOURNAL.md  MAINNET-PROOF.md  MAINNET-V3-JOURNAL.md  MIGRATION-MIKE-NEAR-V5.md  PROTOCOL-ONBOARDING.md  PROXY-KEYS.md  QUICK-VERIFY.md  README.md  REPRODUCIBLE-BUILD.md  SEQUENTIAL-INTENTS-DESIGN.md  SESSION-KEYS.md  SISTER-REPOS.md  START-HERE.md  STATE-BREAK-INVESTIGATION.md  TELEMETRY-DESIGN.md  rust-toolchain.toml
.cargo/: config.toml
collab/: 2026-04-17-smart-account-gated-call-run.md  2026-04-18-adapter-policy-live-validation.md  2026-04-18-balance-trigger-live-validation.md  2026-04-18-fastnear-endpoint-usage.md  2026-04-18-investigate-tx-design-sketch.md  2026-04-18-sequential-functioncall-receipts-narrative.md  2026-04-18-wrap-testnet-protocol-adapter-live-validation.md
collab/artifacts/: 2026-04-18T01-47-20-159Z-router-seq-mo3ofylb-balance-trigger-mo3ofylb.json  2026-04-18T01-48-38-835Z-router-seq-mo3ohnar-balance-trigger-mo3ohnar.json  2026-04-18T03-32-35-998Z-router-seq-mo3s7bxa-balance-trigger-mo3s7bxa.json  2026-04-18T03-35-48-132Z-router-seq-mo3sbg6c-balance-trigger-mo3sbg6c.json  2026-04-18T03-39-16-779Z-router-seq-mo3sfx63-balance-trigger-mo3sfx63.json  2026-04-18T03-39-16-802Z-router-seq-mo3sfx6q-balance-trigger-mo3sfx6q.json  2026-04-18T03-40-31-843Z-router-seq-mo3shj37-balance-trigger-mo3shj37.json  2026-04-18T03-45-16-626Z-router-seq-mo3snmtu-balance-trigger-mo3snmtu.json  2026-04-18T03-46-04-477Z-router-seq-mo3sonr1-balance-trigger-mo3sonr1.json  2026-04-18T13-20-54-668Z-wrap-seq-mo4d7wjw-balance-trigger-mo4d7wjw.json  2026-04-18T16-18-27-465Z-simple-example-simple-mo4jdkp3-mo4jk8ax.json  2026-04-19T04-43-09-884Z-intent-sequence-deposit-only-mike-near-mo5a5xh8.json  2026-04-19T04-44-03-387Z-intent-sequence-round-trip-mike-near-mo5a72rf.json  2026-04-19T05-13-31-443Z-intent-sequence-round-trip-mike-near-mo5b8z03.json  2026-04-19T05-21-57-242Z-intent-sequence-round-trip-mike-near-mo5bjta2.json  2026-04-19T05-23-54-555Z-dca-dca-intents-mo5bmbsr-dca-intents-trigger-mo5bmbsr.json  2026-04-19T05-24-23-324Z-intent-sequence-round-trip-mike-near-mo5bmxzw.json  2026-04-19T05-28-46-853Z-dca-dca-intents-mo5bslc5-dca-intents-trigger-mo5bslc5.json  2026-04-19T05-31-11-418Z-intent-sequence-round-trip-mike-near-mo5bvovu.json  2026-04-19T05-37-22-069Z-intent-sequence-round-trip-mike-near-mo5c3mvp.json
contracts/authorizer/: Cargo.toml
contracts/authorizer/src/: lib.rs
contracts/compat-adapter/: Cargo.toml
contracts/compat-adapter/src/: lib.rs
contracts/demo-adapter/: Cargo.toml
contracts/demo-adapter/src/: lib.rs
contracts/echo/: Cargo.toml
contracts/echo/src/: lib.rs
contracts/pathological-router/: Cargo.toml
contracts/pathological-router/src/: lib.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs
contracts/smart-account/: Cargo.toml
contracts/smart-account/src/: lib.rs
contracts/wild-router/: Cargo.toml
contracts/wild-router/src/: lib.rs
examples/: README.md  dca.mjs  intents-deposit-limit.mjs  ladder-swap.mjs  limit-order.mjs  proxy-dapp.mjs  sequential-intents.mjs  session-dapp.mjs  wrap-and-deposit.mjs
md-CLAUDE-chapters/: 01-near-cross-contract-tracing.md  02-latch-conduct-testnet-validation.md  03-smart-account-staged-call.md  04-three-surfaces-observability.md  05-staged-call-three-surfaces.md  06-stage-call-failure-modes.md  07-stage-call-retry-within-yield-window.md  08-stage-call-mixed-outcome-sequence.md  09-balance-trigger-sequence-automation.md  10-cross-caller-isolation-and-positive-dual-retry.md  11-orbital-model-diagrams.md  12-deterministic-smart-account-automation.md  13-stage-call-against-real-defi.md  14-wild-contract-compatibility.md  15-stage-call-wild-contract-semantics.md  16-wrap-testnet-protocol-adapter.md  17-stage-call-multi-contract-intent.md  18-keep-yield-canonical.md  19-protocol-onboarding-and-investigation.md  20-pathological-contract-probe.md  21-asserted-resolve-policy.md  21-asserted-settle-policy.md  22-state-break-investigation.md  23-pre-gate-policy.md  24-value-threading.md  25-session-keys.md  26-proxy-keys.md  README.md  archive-automation-lineage.md  archive-real-world-adapter-lineage.md  archive-staged-call-lineage.md
observer/: Cargo.toml  README.md
observer/fixtures/: ladder-swap.json  limit-order.json
observer/src/: main.rs  nep297.rs  stream.rs  trace.rs
res/: compat_adapter_local.wasm  demo_adapter_local.wasm  echo_local.wasm  router_local.wasm  smart_account_local.wasm  smart_account_release.wasm  wild_router_local.wasm
scripts/: README.md  account-history.mjs  aggregate-runs.mjs  aggregate-runs.test.mjs  block-window.mjs  build-all.sh  check.sh  deploy-testnet.sh  investigate-tx.mjs  investigate-tx.test.mjs  probe-pathological.mjs  probe-pathological.test.mjs  receipt-to-tx.mjs  send-balance-trigger-router-demo.mjs  send-balance-trigger-wrap-demo.mjs  send-register-step-multi.mjs  send-stage-call-multi.mjs  send-staged-echo-demo.mjs  send-staged-mixed-demo.mjs  send-step-echo-demo.mjs  send-step-mixed-demo.mjs  state.mjs  test.sh  trace-tx.mjs  verify-mainnet-claims.sh  watch-tip.mjs
scripts/chapter-recipes/: README.md  send-balance-trigger-wrap-demo.mjs  send-step-echo-demo.mjs  send-step-mixed-demo.mjs
scripts/lib/: events.mjs  events.test.mjs  fastnear.mjs  near-cli.mjs  near-cli.test.mjs  nep413-sign.mjs  nep413-sign.test.mjs  staged-sequence.mjs  staged-sequence.test.mjs  step-sequence.mjs  step-sequence.test.mjs  trace-rpc.mjs  trace-rpc.test.mjs
simple-example/: Cargo.toml  OPERATOR-APPENDIX.md  README.md  SOCIALDB-VARIANT.md
simple-example/contracts/simple-sequencer/: Cargo.toml
simple-example/contracts/simple-sequencer/src/: lib.rs
simple-example/res/: recorder_local.wasm  simple_sequencer_local.wasm
types/: Cargo.toml  README.md
types/src/: lib.rs  types.rs
web/: config.example.js  index.html  index.js  style.css  trace.js
(+16 files in other folders)
