[package]
name = "smart-account-observer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "smart-account-observer"
path = "src/main.rs"

[dependencies]
fastnear-neardata-fetcher = "0.35"
fastnear-primitives = "0.35"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `trace` subcommand: fetches one tx from FastNEAR's TX API and
# renders a receipt-DAG walkthrough. Minimal HTTP + base64-decode
# footprint; no extra runtime deps.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

# Note: profile overrides in non-root Cargo.toml are ignored in a
# workspace. The root `Cargo.toml` sets a wasm-tuned release profile
# (`lto = true`, `codegen-units = 1`, `panic = "abort"`,
# `strip = "symbols"`) which is slow and strips backtraces on this
# host binary. Use debug mode for iteration:
#     cargo run -p smart-account-observer -- --account <id>
# Release is still fine if you don't mind the compile time:
#     cargo run -p smart-account-observer --release -- --account <id>
