[package]
name = "demo-adapter"
version = "0.1.0"
edition = "2021"
publish = false
description = "Demo-only adapter that wraps the repo's dishonest-async wild-router protocol in one honest top-level result."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.26.1"
smart-account-types = { path = "../../types", version = "0.1.0" }

[dev-dependencies]
near-sdk = { version = "5.26.1", features = ["unit-testing"] }
