[package]
name = "smart-account"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.26.1"
smart-account-types = { path = "../../types", version = "0.1.0" }

[dev-dependencies]
near-sdk = { version = "5.26.1", features = ["unit-testing"] }
