[package]
name = "wild-router"
version = "0.1.0"
edition = "2021"
publish = false
description = "Demo protocol with dishonest async semantics: it starts downstream work but returns before that work actually resolves."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.26.1"

[dev-dependencies]
near-sdk = { version = "5.26.1", features = ["unit-testing"] }
